# templative

./: .gitignore  BRIEF.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  planned-features.md  release-plz.toml
.github/workflows/: dist.yml  homebrew.yml  release-plz.yml
planning-docs/: planned-features.md  roadmap.md
src/: config.rs  errors.rs  fs_copy.rs  git.rs  git_cache.rs  main.rs  ops.rs  registry.rs  resolved.rs  utilities.rs
src/ops/: add.rs  change.rs  completions.rs  init.rs  list.rs  remove.rs  tests.rs  update.rs
src/ops/completions/: bash.rs  fish.rs  powershell.rs  zsh.rs
