[package]
name = "templative"
version = "1.0.0"
edition = "2021"
description = "A tiny CLI for instantiating project templates from local directories"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
walkdir = "2"
owo-colors = "4"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
