[package]
name = "templative"
version = "1.0.1"
edition = "2021"
description = "A tiny CLI for instantiating project templates from local directories"
readme = "README.md"
license = "MIT"
repository = "https://github.com/serenacula/templative"
homepage = "https://github.com/serenacula/templative"
keywords = ["template", "cli", "scaffold", "project"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
walkdir = "2"
owo-colors = "4"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
